--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+<!-- Cabeçalho -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aula Introdução HTML</title>
 </head>
-<body>
-    
-</body>
+<!-- Corpo -->
+
+<body><!-- Tag Aberta  -->
+    <h1>Titulo 1</h1>
+    <h2>Titulo 2</h2>
+    <h3>Titulo 3</h3>
+    <h4>Titulo 4</h4>
+    <h5>Titulo 5</h5>
+    <h6>Titulo 6</h6>
+
+    <p>1- As ratitas são aves que possuem osso esterno, localizado no peitoral, e não conseguem voar.</p>
+    <p>2- Conta-se que por volta do ano 250 A.C, na China antiga, um príncipe da região norte do país, estava às
+        vésperas de ser coroado imperador, mas, de acordo com a lei, ele deveria se casar. Sabendo disso, ele resolveu
+        fazer uma “disputa” entre as moças da corte ou quem quer que se achasse digna de sua proposta.</p>
+    <center>
+
+
+        <p>3- Eu me recordo de uma mudança de paradigma que me aconteceu em uma manhã de domingo, no metrô de Nova York.
+            As pessoas estavam calmamente sentadas, lendo jornais, divagando, descansando com os olhos semicerrados. Era
+            uma cena calma, tranqüila.</p>
+    </center>
+
+    <!-- Tag p/imagem -->
+    <img src="img/img1.jpg" alt="">
+    <img src="https://tm.ibxk.com.br/2017/07/13/13160112901226.jpg?ims=600x0/filters:quality(70)"
+
+</body><!-- Tag Fechada -->
+
 </html>
