--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
     <!-- Tag p/imagem -->
     <img src="img/img1.jpg" alt="">
     <img src="https://tm.ibxk.com.br/2017/07/13/13160112901226.jpg?ims=600x0/filters:quality(70)"
+    
+    <!-- Tag para quebrar linha -->
+    <!-- Tag p/link -->
+    <a href="https://pt.wikipedia.org/wiki/Tigre" target="_blank">Clique aqui não</a>
+
+    <!-- Tag p/lista -->
+     <h1> lista de Itens </h1>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
 
 </body><!-- Tag Fechada -->
 
